# voiceover

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: app.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  elevenlabs.rs  ffmpeg.rs  google_drive.rs  lib.rs  main.rs  pipeline.rs  prerequisites.rs
src-tauri/src/commands/: mod.rs  recording.rs  window.rs
src/lib/: logger.ts  recorder.svelte.ts  state.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/preview/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/widget/: +page.svelte
