[package]
name = "voiceover"
version = "0.1.0"
description = "Screen recorder with ElevenLabs voice replacement"
authors = ["dave"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "voiceover_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
dirs = "6"
tauri-plugin-global-shortcut = "2"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
url = "2"
open = "5"
